# polkadot-event-recorder

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2022-08-28-141406_create_polkadot_events/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs  static_files.rs
