[package]
name = "bright_inventions_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subxt = "0.23.0"

#copied form subxt/examples/Cargo.toml

tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "time"] }
sp-keyring = "6.0.0"
futures = "0.3.13"
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
tracing-subscriber = "0.3.11"


#https://diesel.rs/guides/getting-started
diesel = { version = "1.2.2", features = ["postgres"] }
dotenv = "0.11.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
serde = "1.0.43"
serde_derive  = "1.0.43"
serde_json = "1.0.16"

rocket = "0.4.11"
rocket_codegen = "0.4.11"
rocket_contrib = {version = "0.4.11", default-features = false, features = ["json"]}

